EZAF-6588: Update Ray GPU example

--- a/Data-Science/Ray/Ray-GPU/ray-gpu-executor.ipynb
+++ b/Data-Science/Ray/Ray-GPU/ray-gpu-executor.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "5720543d-c305-48a0-ba68-3464915fa4f4",
+   "execution_count": 64,
+   "id": "a14125ea-7936-4c3c-a0dd-3f4a92379b6e",
    "metadata": {
     "tags": []
    },
@@ -17,8 +17,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "8e13f3f1-1b06-494f-8436-e8d9d04689c2",
+   "execution_count": 65,
+   "id": "09da1f86-85f2-4593-a9bc-5273f215fb7d",
    "metadata": {
     "tags": []
    },
@@ -33,8 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "c78908eb-0ff0-46c6-8f22-9fa3c114853a",
+   "execution_count": 67,
+   "id": "392e3e56-35b3-4a37-8686-a20eca18921b",
    "metadata": {
     "tags": []
    },
@@ -43,37 +43,38 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-07-15 06:07:37,381\tINFO dashboard_sdk.py:338 -- Uploading package gcs://_ray_pkg_b78492fdea11c7d4.zip.\n",
-      "2024-07-15 06:07:37,382\tINFO packaging.py:530 -- Creating a file package for local directory './'.\n"
+      "2024-09-13 13:24:32,153\tINFO dashboard_sdk.py:338 -- Uploading package gcs://_ray_pkg_8d335cfeea7b689e.zip.\n",
+      "2024-09-13 13:24:32,154\tINFO packaging.py:530 -- Creating a file package for local directory './'.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ray job submitted with job_id: raysubmit_SJBrv3Cb9DGXn4PN\n",
-      "2024-07-14 23:07:37,403\tINFO job_manager.py:530 -- Runtime env is setting up.\n",
-      "2024-07-14 23:08:28.541383: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-07-14 23:08:28.582176: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-07-14 23:08:29.943553: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+      "Ray job submitted with job_id: raysubmit_hBHF3VY97pSqTWvk\n",
+      "2024-09-13 06:24:34.492564: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-09-13 06:24:34.513902: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-09-13 06:24:34.520338: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-09-13 06:24:34.536575: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-09-13 06:24:38.755351: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
       "Num GPUs Available:  1\n",
       "TensorFlow will run on GPU.\n",
-      "2024-07-14 23:08:32.217517: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1639] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 3234 MB memory:  -> device: 0, name: NVIDIA A100-PCIE-40GB MIG 1g.5gb, pci bus id: 0000:86:00.0, compute capability: 8.0\n",
+      "2024-09-13 06:24:43.847637: I tensorflow/core/common_runtime/gpu/gpu_device.cc:2021] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 6417 MB memory:  -> device: 0, name: Tesla P4, pci bus id: 0000:12:00.0, compute capability: 6.1\n",
       "input: (_Arg): /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "2024-07-14 23:08:32.244183: I tensorflow/core/common_runtime/placer.cc:114] input: (_Arg): /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "2024-09-13 06:24:43.868656: I tensorflow/core/common_runtime/placer.cc:162] input: (_Arg): /job:localhost/replica:0/task:0/device:GPU:0\n",
       "_EagerConst: (_EagerConst): /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "2024-07-14 23:08:32.244195: I tensorflow/core/common_runtime/placer.cc:114] _EagerConst: (_EagerConst): /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "2024-09-13 06:24:43.868836: I tensorflow/core/common_runtime/placer.cc:162] _EagerConst: (_EagerConst): /job:localhost/replica:0/task:0/device:GPU:0\n",
       "output_RetVal: (_Retval): /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "2024-07-14 23:08:32.244199: I tensorflow/core/common_runtime/placer.cc:114] output_RetVal: (_Retval): /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "2024-07-14 23:08:32.279047: I tensorflow/core/common_runtime/eager/execute.cc:1678] Executing op _EagerConst in device /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "2024-09-13 06:24:43.868938: I tensorflow/core/common_runtime/placer.cc:162] output_RetVal: (_Retval): /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "2024-09-13 06:24:43.928017: I tensorflow/core/common_runtime/eager/execute.cc:1746] Executing op _EagerConst in device /job:localhost/replica:0/task:0/device:GPU:0\n",
       "x: (_Arg): /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "2024-07-14 23:08:32.281067: I tensorflow/core/common_runtime/placer.cc:114] x: (_Arg): /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "2024-09-13 06:24:43.929286: I tensorflow/core/common_runtime/placer.cc:162] x: (_Arg): /job:localhost/replica:0/task:0/device:GPU:0\n",
       "Square: (Square): /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "2024-07-14 23:08:32.281077: I tensorflow/core/common_runtime/placer.cc:114] Square: (Square): /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "2024-09-13 06:24:43.929373: I tensorflow/core/common_runtime/placer.cc:162] Square: (Square): /job:localhost/replica:0/task:0/device:GPU:0\n",
       "y_RetVal: (_Retval): /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "2024-07-14 23:08:32.281081: I tensorflow/core/common_runtime/placer.cc:114] y_RetVal: (_Retval): /job:localhost/replica:0/task:0/device:GPU:0\n",
-      "2024-07-14 23:08:32.281974: I tensorflow/core/common_runtime/eager/execute.cc:1678] Executing op Square in device /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "2024-09-13 06:24:43.929416: I tensorflow/core/common_runtime/placer.cc:162] y_RetVal: (_Retval): /job:localhost/replica:0/task:0/device:GPU:0\n",
+      "2024-09-13 06:24:43.929977: I tensorflow/core/common_runtime/eager/execute.cc:1746] Executing op Square in device /job:localhost/replica:0/task:0/device:GPU:0\n",
       "Original data sample: [ 1  2  3  4  5  6  7  8  9 10]\n",
       "Squared data sample: [  1.   4.   9.  16.  25.  36.  49.  64.  81. 100.]\n",
       "\n"
@@ -83,12 +84,12 @@
    "source": [
     "# Submit Ray job using JobSubmissionClient\n",
     "job_id = client.submit_job(\n",
-    "    entrypoint=\"python ray-gpu-example.py\",\n",
+    "    entrypoint=\"python ex.py\",\n",
     "    runtime_env={\n",
     "        \"working_dir\": \"./\",\n",
-    "        \"pip\": [\"tensorflow==2.13.0\"],\n",
+    "        \"pip\": [\"tensorflow==2.17.0\"],\n",
     "        # Add proxy in env_vars if required\n",
-    "        \"env_vars\": {}      \n",
+    "        \"env_vars\": {}\n",
     "    },\n",
     "    entrypoint_num_gpus = 1,\n",
     "    entrypoint_num_cpus = 1\n",
@@ -113,20 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92f248b7-74d0-45fb-becf-01b8dfa5f6d8",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Disconnect from the Ray cluster\n",
-    "ray.shutdown()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4eee477f-a3c9-44c1-9804-b638b0769548",
+   "id": "4154ccbd-d86e-4517-a697-1393115b29fb",
    "metadata": {},
    "outputs": [],
    "source": []
