EZAF-6588: fixed example name

--- a/Data-Science/Ray/Ray-GPU/ray-gpu-executor.ipynb
+++ b/Data-Science/Ray/Ray-GPU/ray-gpu-executor.ipynb
@@ -84,7 +84,7 @@
    "source": [
     "# Submit Ray job using JobSubmissionClient\n",
     "job_id = client.submit_job(\n",
-    "    entrypoint=\"python ex.py\",\n",
+    "    entrypoint=\"python ray-gpu-example.py\",\n",
     "    runtime_env={\n",
     "        \"working_dir\": \"./\",\n",
     "        \"pip\": [\"tensorflow==2.17.0\"],\n",
