EZAF-6588: Update Ray Serve example

--- a/Data-Science/Ray/Ray-Serve/ray-serve-executor.ipynb
+++ b/Data-Science/Ray/Ray-Serve/ray-serve-executor.ipynb
@@ -312,6 +312,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "51ddd708",
+   "metadata": {},
+   "source": [
+    "#### Update! \n",
+    "Please see https://github.com/ray-project/ray/issues/46378, as detailed ray will not have ML packages installed by default\n",
+    "\n",
+    "User has to provide dependencies required to serve an application, follow below steps to add dependenices:\n",
+    "1. Specify the dependencies required in the config file as below example:\n",
+    "```\n",
+    "  runtime_env:\n",
+    "    working_dir: \"gcs://_ray_pkg_fef565b457f470d9.zip\"\n",
+    "    pip:\n",
+    "    - joblib==1.4.2\n",
+    "    - scikit-learn==1.5.1\n",
+    "```\n",
+    "2. Based on the cluster setup,set proxy if required :\n",
+    "```\n",
+    "  runtime_env:\n",
+    "    working_dir: \"gcs://_ray_pkg_fef565b457f470d9.zip\"\n",
+    "    pip:\n",
+    "    - joblib==1.4.2\n",
+    "    - scikit-learn==1.5.1\n",
+    "    env_vars:\n",
+    "      http_proxy: proxy_url\n",
+    "      https_proxy: proxy_url\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "9a9372b9-ea63-439f-8531-ad44046dc692",
