Added  fs.materialize line to accomodate for populating the online store

--- a/Data-Science/Feast/ride-sharing-example.ipynb
+++ b/Data-Science/Feast/ride-sharing-example.ipynb
@@ -300,6 +300,7 @@
     "\n",
     "We now serialize the latest values of features since the beginning of time to prepare for serving (note: `materialize_incremental` serializes all new features since the last `materialize` call).\n",
     "\n",
+    "While running the cell if we get an error that online store is not populated, uncomment the commented line in the below cell and re run the cell\n",
     "An alternative to using the CLI command is to use Python:\n",
     "\n",
     "```bash\n",
@@ -315,7 +316,8 @@
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
-    "fs.materialize_incremental(datetime.now())"
+    "fs.materialize_incremental(datetime.now())\n"
+    "#fs.materialize(start_date=datetime(2021, 4, 12),end_date=datetime.now())"
    ]
   },
   {
