--- a/Data-Science/Feast/ride-sharing-example.ipynb
+++ b/Data-Science/Feast/ride-sharing-example.ipynb
@@ -316,7 +316,7 @@
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
-    "fs.materialize_incremental(datetime.now())\n"
+    "fs.materialize_incremental(datetime.now())\n",
     "#fs.materialize(start_date=datetime(2021, 4, 12),end_date=datetime.now())"
    ]
   },
