--- a/Data-Science/Feast/ride-sharing-example.ipynb
+++ b/Data-Science/Feast/ride-sharing-example.ipynb
@@ -300,9 +300,8 @@
     "\n",
     "We now serialize the latest values of features since the beginning of time to prepare for serving (note: `materialize_incremental` serializes all new features since the last `materialize` call).\n",
     "\n",
-    "While running the cell if we get an error that online store is not populated, uncomment the commented line in the below cell and re run the cell",
-    "\n",
-    "Refer to [documentation](https://docs.feast.dev/how-to-guides/feast-snowflake-gcp-aws/load-data-into-the-online-store) page on the materialize and materialize_incremental usage.\n",
+    "While running the cell if we get an error that online store is not populated, uncomment the commented line in the below cell and re run the cell\n",
+    "\nRefer to [documentation](https://docs.feast.dev/how-to-guides/feast-snowflake-gcp-aws/load-data-into-the-online-store) page on the materialize and materialize_incremental usage.\n",
     "\nAn alternative to using the CLI command is to use Python:\n",
     "\n",
     "```bash\n",
