--- a/Data-Science/Feast/ride-sharing-example.ipynb
+++ b/Data-Science/Feast/ride-sharing-example.ipynb
@@ -300,7 +300,9 @@
     "\n",
     "We now serialize the latest values of features since the beginning of time to prepare for serving (note: `materialize_incremental` serializes all new features since the last `materialize` call).\n",
     "\n",
-    "An alternative to using the CLI command is to use Python:\n",
+    "While running the cell if we get an error that online store is not populated, uncomment the commented line in the below cell and re run the cell\n",
+    "\nRefer to [documentation](https://docs.feast.dev/how-to-guides/feast-snowflake-gcp-aws/load-data-into-the-online-store) page on the materialize and materialize_incremental usage.\n",
+    "\nAn alternative to using the CLI command is to use Python:\n",
     "\n",
     "```bash\n",
     "CURRENT_TIME=$(date -u +\"%Y-%m-%dT%H:%M:%S\")\n",
@@ -315,7 +317,8 @@
    "outputs": [],
    "source": [
     "from datetime import datetime\n",
-    "fs.materialize_incremental(datetime.now())"
+    "fs.materialize_incremental(datetime.now())\n",
+    "#fs.materialize(start_date=datetime(2021, 4, 12),end_date=datetime.now())"
    ]
   },
   {
