Use proxies from env

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -43,10 +43,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "# Specify proxy and no_proxy value if applicable\n",
-    "http_proxy=\"\" ## \"http://<proxy_host>:<port>\"\n",
+    "http_proxy = os.environ[\"http_proxy\"] ## \"http://<proxy_host>:<port>\"\n",
     "# After default.svc append comma separated list of IP address, hostname, CIDR block, service name, etc.\n",
-    "no_proxy=\"\" ## \"localhost,.cluster.local,.svc,.default.svc, <host>:<port>, x.x.x.x/y,...\""
+    "no_proxy = os.environ[\"no_proxy\"] ## \"localhost,.cluster.local,.svc,.default.svc, <host>:<port>, x.x.x.x/y,...\""
    ]
   },
   {
