--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "# Specify proxy and no_proxy value if applicable\n",
+    "# Specify proxy and no_proxy values for pipeline from notebook environment variables. Update manually if needed.\n",
     "http_proxy = os.environ[\"http_proxy\"] ## \"http://<proxy_host>:<port>\"\n",
     "# After default.svc append comma separated list of IP address, hostname, CIDR block, service name, etc.\n",
     "no_proxy = os.environ[\"no_proxy\"] ## \"localhost,.cluster.local,.svc,.default.svc, <host>:<port>, x.x.x.x/y,...\""
