EZAF-6970 Remove kubeflow.katib imports and calls from Kubeflow MNSIT example (#227)
* EZAF-6970 Remove kubeflow.katib imports and calls from Kubeflow MNSIT example

* Use proxies from env

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -43,10 +43,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Specify proxy and no_proxy value if applicable\n",
-    "http_proxy=\"\" ## \"http://<proxy_host>:<port>\"\n",
+    "import os\n",
+    "# Specify proxy and no_proxy values for pipeline from notebook environment variables. Update manually if needed.\n",
+    "http_proxy = os.environ[\"http_proxy\"] ## \"http://<proxy_host>:<port>\"\n",
     "# After default.svc append comma separated list of IP address, hostname, CIDR block, service name, etc.\n",
-    "no_proxy=\"\" ## \"localhost,.cluster.local,.svc,.default.svc, <host>:<port>, x.x.x.x/y,...\""
+    "no_proxy = os.environ[\"no_proxy\"] ## \"localhost,.cluster.local,.svc,.default.svc, <host>:<port>, x.x.x.x/y,...\""
    ]
   },
   {
@@ -72,14 +73,6 @@
     "import kfp\n",
     "import kfp.dsl as dsl\n",
     "from kfp import components\n",
-    "from kubeflow.katib import ApiClient\n",
-    "from kubeflow.katib import V1beta1ExperimentSpec\n",
-    "from kubeflow.katib import V1beta1AlgorithmSpec\n",
-    "from kubeflow.katib import V1beta1ObjectiveSpec\n",
-    "from kubeflow.katib import V1beta1ParameterSpec\n",
-    "from kubeflow.katib import V1beta1FeasibleSpace\n",
-    "from kubeflow.katib import V1beta1TrialTemplate\n",
-    "from kubeflow.katib import V1beta1TrialParameterSpec\n",
     "from pathlib import Path\n",
     "\n",
     "######################################### Storage Parameters ##############################################\n",
@@ -173,36 +166,36 @@
     "    parallel_trial_count = 2\n",
     "\n",
     "    # Objective specification.\n",
-    "    objective = V1beta1ObjectiveSpec(\n",
-    "        type=\"minimize\",\n",
-    "        goal=0.001,\n",
-    "        objective_metric_name=\"loss\"\n",
-    "    )\n",
+    "    objective = {\n",
+    "        \"objectiveMetricName\": \"loss\",\n",
+    "        \"type\": \"minimize\",\n",
+    "        \"goal\": 0.001,\n",
+    "    }\n",
     "\n",
     "    # Algorithm specification.\n",
-    "    algorithm = V1beta1AlgorithmSpec(\n",
-    "        algorithm_name=\"random\",\n",
-    "    )\n",
+    "    algorithm = {\n",
+    "        \"algorithmName\": \"random\",\n",
+    "    }\n",
     "\n",
     "    # Experiment search space.\n",
     "    # In this example we tune learning rate and batch size.\n",
     "    parameters = [\n",
-    "        V1beta1ParameterSpec(\n",
-    "            name=\"learning_rate\",\n",
-    "            parameter_type=\"double\",\n",
-    "            feasible_space=V1beta1FeasibleSpace(\n",
-    "                min=\"0.01\",\n",
-    "                max=\"0.05\"\n",
-    "            ),\n",
-    "        ),\n",
-    "        V1beta1ParameterSpec(\n",
-    "            name=\"batch_size\",\n",
-    "            parameter_type=\"int\",\n",
-    "            feasible_space=V1beta1FeasibleSpace(\n",
-    "                min=\"80\",\n",
-    "                max=\"100\"\n",
-    "            ),\n",
-    "        )\n",
+    "        {\n",
+    "            \"name\": \"learning_rate\",\n",
+    "            \"parameterType\": \"double\",\n",
+    "            \"feasibleSpace\": {\n",
+    "                \"min\": \"0.01\",\n",
+    "                \"max\": \"0.05\",\n",
+    "            },\n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"batch_size\",\n",
+    "            \"parameterType\": \"int\",\n",
+    "            \"feasibleSpace\": {\n",
+    "                \"min\": \"80\",\n",
+    "                \"max\": \"100\",\n",
+    "            },\n",
+    "        },\n",
     "    ]\n",
     "\n",
     "    # Experiment Trial template.\n",
@@ -334,33 +327,33 @@
     "    }\n",
     "\n",
     "    # Configure parameters for the Trial template.\n",
-    "    trial_template = V1beta1TrialTemplate(\n",
-    "        primary_container_name=\"tensorflow\",\n",
-    "        trial_parameters=[\n",
-    "            V1beta1TrialParameterSpec(\n",
-    "                name=\"learningRate\",\n",
-    "                description=\"Learning rate for the training model\",\n",
-    "                reference=\"learning_rate\"\n",
-    "            ),\n",
-    "            V1beta1TrialParameterSpec(\n",
-    "                name=\"batchSize\",\n",
-    "                description=\"Batch size for the model\",\n",
-    "                reference=\"batch_size\"\n",
-    "            ),\n",
+    "    trial_template = {\n",
+    "        \"primaryContainerName\": \"tensorflow\",\n",
+    "        \"trialParameters\": [\n",
+    "            {\n",
+    "                \"name\": \"learningRate\",\n",
+    "                \"description\": \"Learning rate for the training model\",\n",
+    "                \"reference\": \"learning_rate\",\n",
+    "            },\n",
+    "            {\n",
+    "                \"name\": \"batchSize\",\n",
+    "                \"description\": \"Batch size for the model\",\n",
+    "                \"reference\": \"batch_size\",\n",
+    "            },\n",
     "        ],\n",
-    "        trial_spec=trial_spec\n",
-    "    )\n",
+    "        \"trialSpec\": trial_spec,\n",
+    "    }\n",
     "\n",
     "    # Create an Experiment from the above parameters.\n",
-    "    experiment_spec = V1beta1ExperimentSpec(\n",
-    "        max_trial_count=max_trial_count,\n",
-    "        max_failed_trial_count=max_failed_trial_count,\n",
-    "        parallel_trial_count=parallel_trial_count,\n",
-    "        objective=objective,\n",
-    "        algorithm=algorithm,\n",
-    "        parameters=parameters,\n",
-    "        trial_template=trial_template\n",
-    "    )\n",
+    "    experiment_spec = {\n",
+    "        \"maxTrialCount\": max_trial_count,\n",
+    "        \"maxFailedTrialCount\": max_failed_trial_count,\n",
+    "        \"parallelTrialCount\": parallel_trial_count,\n",
+    "        \"objective\": objective,\n",
+    "        \"algorithm\": algorithm,\n",
+    "        \"parameters\": parameters,\n",
+    "        \"trialTemplate\": trial_template,\n",
+    "    }\n",
     "\n",
     "    # Create the KFP task for the Katib Experiment.\n",
     "    # Experiment Spec should be serialized to a valid Kubernetes object.\n",
@@ -369,7 +362,7 @@
     "    op = katib_experiment_launcher_op(\n",
     "        experiment_name=experiment_name,\n",
     "        experiment_namespace=experiment_namespace,\n",
-    "        experiment_spec=ApiClient().sanitize_for_serialization(experiment_spec),\n",
+    "        experiment_spec=experiment_spec,\n",
     "        experiment_timeout_minutes=60,\n",
     "        delete_finished_experiment=False)\n",
     "\n",
