EZAF-7472 Add airgap prefix to kubeflow mnist images in notebook

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -47,7 +47,9 @@
     "# Specify proxy and no_proxy values for pipeline from notebook environment variables. Update manually if needed.\n",
     "http_proxy = os.environ[\"http_proxy\"] ## \"http://<proxy_host>:<port>\"\n",
     "# After default.svc append comma separated list of IP address, hostname, CIDR block, service name, etc.\n",
-    "no_proxy = os.environ[\"no_proxy\"] ## \"localhost,.cluster.local,.svc,.default.svc, <host>:<port>, x.x.x.x/y,...\""
+    "no_proxy = os.environ[\"no_proxy\"] ## \"localhost,.cluster.local,.svc,.default.svc, <host>:<port>, x.x.x.x/y,...\"\n",
+    "# Specify airgap registry to use as a prefix for images\n",
+    "airgap_registry = os.environ[\"AIRGAP_REGISTRY\"]"
    ]
   },
   {
@@ -217,7 +219,7 @@
     "                            \"containers\": [\n",
     "                                {\n",
     "                                    \"name\": \"tensorflow\",\n",
-    "                                    \"image\": \"gcr.io/mapr-252711/kubeflow/kfexamples/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
+    "                                    \"image\": f\"{airgap_registry}gcr.io/mapr-252711/kubeflow/kfexamples/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
     "                                    \"command\": [\n",
     "                                        \"python\",\n",
     "                                        \"/opt/model.py\",\n",
@@ -276,7 +278,7 @@
     "                            \"containers\": [\n",
     "                                {\n",
     "                                    \"name\": \"tensorflow\",\n",
-    "                                    \"image\": \"gcr.io/mapr-252711/kubeflow/kfexamples/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
+    "                                    \"image\": f\"{airgap_registry}gcr.io/mapr-252711/kubeflow/kfexamples/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
     "                                    \"command\": [\n",
     "                                        \"python\",\n",
     "                                        \"/opt/model.py\",\n",
@@ -379,7 +381,7 @@
     "# This function converts Katib Experiment HP results to args.\n",
     "\n",
     "from kfp import components\n",
-    "@dsl.component(base_image=\"python:3.7\")\n",
+    "@dsl.component(base_image = f\"{airgap_registry}python:3.7\")\n",
     "def convert_katib_results(katib_results: dict) -> str:\n",
     "    import json\n",
     "    import pprint\n",
@@ -429,7 +431,7 @@
     "                \"containers\": [\n",
     "                    {\n",
     "                        \"name\": \"tensorflow\",\n",
-    "                        \"image\": \"gcr.io/mapr-252711/kubeflow/kfexamples/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
+    "                        \"image\": f\"{airgap_registry}gcr.io/mapr-252711/kubeflow/kfexamples/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
     "                        \"command\": [\n",
     "                            \"sh\",\n",
     "                            \"-c\"\n",
@@ -497,7 +499,7 @@
     "                \"containers\": [\n",
     "                    {\n",
     "                        \"name\": \"tensorflow\",\n",
-    "                        \"image\": \"gcr.io/mapr-252711/kubeflow/kfexamples/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
+    "                        \"image\": f\"{airgap_registry}gcr.io/mapr-252711/kubeflow/kfexamples/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
     "                        \"command\": [\n",
     "                            \"sh\",\n",
     "                            \"-c\",\n",
