EZAF-7472 Add script to prepend images with airgap prefix in component yaml files

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -22,10 +22,7 @@
     "# # Copy template \"object_store_secret.yaml.tpl\" from shared/ezua-tutorials/current-release/Data-Analytics/Spark directory to e.g. user folder\n",
     "\n",
     "# # Users have to pull the following images manually and make available in local repo for clusters in airgap network to run the example.\n",
-    "  # \"nikenano/launchernew:latest\" , \"quay.io/aipipeline/kserve-component:v0.10.1\"\n",
-    "## Users have to add their local airgap repo path prefix to images mentioned above in following yaml files.\n",
-    "  # 'component/kubeflow-launcher-component.yaml' , 'component/kserve-component.yaml'\n",
-    "\n",
+    "  # \"docker.io/kubeflowkatib/kubeflow-pipelines-launcher\", \"nikenano/launchernew:latest\", \"quay.io/aipipeline/kserve-component:v0.10.1\"\n",
     "\n",
     "import kfp\n",
     "\n",
@@ -34,6 +31,26 @@
     "\n",
     "!sed -e \"s/\\$AUTH_TOKEN/$AUTH_TOKEN/\" /mnt/user/object_store_secret.yaml.tpl > /tmp/object_store_secret.yaml\n",
     "!kubectl apply -f /tmp/object_store_secret.yaml -n {namespace}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88cb0bbf-cf10-4b3a-97bf-60ff80878545",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "# # Users have to add their local airgap repo path prefix to images mentioned above in following yaml files.\n",
+    "  # \"component/katib-launcher-component.yaml\", \"component/kubeflow-launcher-component.yaml\", \"component/kserve-component.yaml\"\n",
+    "\n",
+    "if [[ -n \"$AIRGAP_REGISTRY\" ]]; then\n",
+    "    echo 'AIRGAP_REGISTRY is set - updating component YAML files'\n",
+    "    for file in `ls component/*.yaml`; do\n",
+    "        echo \"$file\";\n",
+    "        sed \"\\%image: *$AIRGAP_REGISTRY%b; s%image: *%image: $AIRGAP_REGISTRY%g\" --in-place \"$file\";\n",
+    "    done;\n",
+    "fi"
    ]
   },
   {
