Rearrange cleanup calls to unblock process

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -699,10 +699,10 @@
    "source": [
     "# Cleanup step\n",
     "\n",
-    "# Delete PVC\n",
-    "!kubectl delete -f /tmp/pvc.yaml\n",
     "# Delete InferenceService\n",
-    "!kubectl delete isvc $name"
+    "!kubectl delete isvc $name\n",
+    "# Delete PVC\n",
+    "!kubectl delete -f /tmp/pvc.yaml"
    ]
   }
  ],
