EZAF-7472 Add airgap prefix to images in kubeflow mnist example (#234)
* EZAF-7472 Add airgap prefix to kubeflow mnist images in notebook

* EZAF-7472 Add script to prepend images with airgap prefix in component yaml files

* Add cleanup step in kubeflow MNIST example

* Rearrange cleanup calls to unblock process

* Remove cleanup step since pvc deletion takes to long

* Update Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb

--- a/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
+++ b/Data-Science/Kubeflow/MNIST-Digits-Recognition/mnist_katib_tf_kserve_example.ipynb
@@ -22,10 +22,7 @@
     "# # Copy template \"object_store_secret.yaml.tpl\" from shared/ezua-tutorials/current-release/Data-Analytics/Spark directory to e.g. user folder\n",
     "\n",
     "# # Users have to pull the following images manually and make available in local repo for clusters in airgap network to run the example.\n",
-    "  # \"nikenano/launchernew:latest\" , \"quay.io/aipipeline/kserve-component:v0.10.1\"\n",
-    "## Users have to add their local airgap repo path prefix to images mentioned above in following yaml files.\n",
-    "  # 'component/kubeflow-launcher-component.yaml' , 'component/kserve-component.yaml'\n",
-    "\n",
+    "  # \"docker.io/kubeflowkatib/kubeflow-pipelines-launcher\", \"nikenano/launchernew:latest\", \"quay.io/aipipeline/kserve-component:v0.10.1\"\n",
     "\n",
     "import kfp\n",
     "\n",
@@ -39,6 +36,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "88cb0bbf-cf10-4b3a-97bf-60ff80878545",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "# # Local airgap repo path prefix shall be added to images mentioned above in following yaml files.\n",
+    "  # \"component/katib-launcher-component.yaml\", \"component/kubeflow-launcher-component.yaml\", \"component/kserve-component.yaml\"\n",
+    "\n",
+    "if [[ -n \"$AIRGAP_REGISTRY\" ]]; then\n",
+    "    echo 'AIRGAP_REGISTRY is set - updating component YAML files'\n",
+    "    for file in `ls component/*.yaml`; do\n",
+    "        echo \"$file\";\n",
+    "        sed \"\\%image: *$AIRGAP_REGISTRY%b; s%image: *%image: $AIRGAP_REGISTRY%g\" --in-place \"$file\";\n",
+    "    done;\n",
+    "fi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "89bb0c90-a09f-4197-b9a2-f7558efb31de",
    "metadata": {},
    "outputs": [],
@@ -47,7 +64,9 @@
     "# Specify proxy and no_proxy values for pipeline from notebook environment variables. Update manually if needed.\n",
     "http_proxy = os.environ[\"http_proxy\"] ## \"http://<proxy_host>:<port>\"\n",
     "# After default.svc append comma separated list of IP address, hostname, CIDR block, service name, etc.\n",
-    "no_proxy = os.environ[\"no_proxy\"] ## \"localhost,.cluster.local,.svc,.default.svc, <host>:<port>, x.x.x.x/y,...\""
+    "no_proxy = os.environ[\"no_proxy\"] ## \"localhost,.cluster.local,.svc,.default.svc, <host>:<port>, x.x.x.x/y,...\"\n",
+    "# Specify airgap registry to use as a prefix for images\n",
+    "airgap_registry = os.environ[\"AIRGAP_REGISTRY\"]"
    ]
   },
   {
@@ -217,7 +236,7 @@
     "                            \"containers\": [\n",
     "                                {\n",
     "                                    \"name\": \"tensorflow\",\n",
-    "                                    \"image\": \"gcr.io/mapr-252711/kubeflow/kfexamples/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
+    "                                    \"image\": f\"{airgap_registry}gcr.io/mapr-252711/kubeflow/kfexamples/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
     "                                    \"command\": [\n",
     "                                        \"python\",\n",
     "                                        \"/opt/model.py\",\n",
@@ -276,7 +295,7 @@
     "                            \"containers\": [\n",
     "                                {\n",
     "                                    \"name\": \"tensorflow\",\n",
-    "                                    \"image\": \"gcr.io/mapr-252711/kubeflow/kfexamples/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
+    "                                    \"image\": f\"{airgap_registry}gcr.io/mapr-252711/kubeflow/kfexamples/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
     "                                    \"command\": [\n",
     "                                        \"python\",\n",
     "                                        \"/opt/model.py\",\n",
@@ -379,7 +398,7 @@
     "# This function converts Katib Experiment HP results to args.\n",
     "\n",
     "from kfp import components\n",
-    "@dsl.component(base_image=\"python:3.7\")\n",
+    "@dsl.component(base_image = f\"{airgap_registry}python:3.7\")\n",
     "def convert_katib_results(katib_results: dict) -> str:\n",
     "    import json\n",
     "    import pprint\n",
@@ -429,7 +448,7 @@
     "                \"containers\": [\n",
     "                    {\n",
     "                        \"name\": \"tensorflow\",\n",
-    "                        \"image\": \"gcr.io/mapr-252711/kubeflow/kfexamples/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
+    "                        \"image\": f\"{airgap_registry}gcr.io/mapr-252711/kubeflow/kfexamples/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
     "                        \"command\": [\n",
     "                            \"sh\",\n",
     "                            \"-c\"\n",
@@ -497,7 +516,7 @@
     "                \"containers\": [\n",
     "                    {\n",
     "                        \"name\": \"tensorflow\",\n",
-    "                        \"image\": \"gcr.io/mapr-252711/kubeflow/kfexamples/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
+    "                        \"image\": f\"{airgap_registry}gcr.io/mapr-252711/kubeflow/kfexamples/docker.io/liuhougangxa/tf-estimator-mnist\",\n",
     "                        \"command\": [\n",
     "                            \"sh\",\n",
     "                            \"-c\",\n",
